# tuckmark

./: .env.example  .env.local.example  .gitignore  .gitmodules  BRAND.md  CONTEXT.md  DESIGN.md  PRODUCT.md  README.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: pr-label-release.json  quality-gates.json
.github/scripts/: label-gate.mjs  release-notes.mjs  release-plan.mjs  release-snapshot.mjs  select-release-snapshot.mjs
.github/workflows/: ci-main.yml  ci-pr.yml  label-gate.yml  notify-release-failure.yml  pages.yml  release.yml
apps/web/: build-metadata.ts  index.html  package.json  playwright.config.storybook.ts  playwright.config.sync.ts  playwright.config.ts  release-notes.test.ts  tsconfig.json  vite.config.test.ts  vite.config.ts
apps/web/.storybook/: main.ts  preview.ts
apps/web/public/: 404.html
apps/web/src/: api-client.ts  app-launch-splash.stories.tsx  app.tsx  (+83 more)
docs/: quality-release-contract.md
docs/adr/: 0001-dual-print-path-contract.md  0001-web-static-runtime-relative-base.md
docs/specs/: README.md
scripts/: agent-template-practice-report.mjs  build-detonger-wasm.mjs  dev-preview.mjs  generate-pwa-icons.mjs  install-hooks.ts  render-trigger-variants.py  run-biome.ts  serve-pages-preview.ts  setup.ts  shared.ts  sync-worktree-resources.ts  test-worktree-bootstrap.ts  vitest.workspace-alias.ts  worktree-sync.paths
skills/tuckmark-template-developer/: SKILL.md
skills/tuckmark-template-user/: SKILL.md
tools/detonger-preview-encoder/: Cargo.toml
tools/detonger-preview-encoder/src/: main.rs
(+62 files in other folders)
