[package]
name = "tuckmark-detonger-preview-encoder"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.32", features = ["derive"] }
detonger-protocol = { path = "../../detonger/crates/detonger-protocol" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
